web-app/client/assets/css/new/main.css
/* ... */
.app-list-name > .app-status {
	text-transform: uppercase;
}

.panel ul {
	list-style: none;
}

.tree-chart {
	float: right;
	width: 262px;
}

.tree-count {
	float: right;
	width: 80px;
	padding: 10px;
	line-height: 32px !important;
}

.tree-toggle {
	float: left;
	cursor: pointer;
	width: 26px;
	padding-right: 0 !important;
	text-align: center;
	color: #505050;
}

.tree-chart, .tree-toggle, .tree-element {
	padding: 10px;
}
.tree-toggle {
	padding-left: 0;
	line-height: 30px;
}

.tree-node {
	clear: both;
}

/*
 * Loading Services
 */

span.service-icon {
  height: 32px;
  width: 32px;
  background-repeat: no-repeat;
  border: none !important;
  display: inline-block;
}

span.service-icon.loading {
  background-image: url('/assets/img/services-loading-blue.gif');
}

span.service-icon.complete {
  background-image: url('/assets/img/ok-icon.png');
}

#services-loading {
    position: absolute;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    color: white;
    opacity: 0.8;
    z-index: 3;
}

.services-box {
	height: 500px;
	width: 500px;
	margin: 0 auto;
}

.animated, .services-list {
	width: 50%;
	margin-right: auto;
	margin-left: auto;
}

.animated.large {
	width: 75%;
}

.animated {
	font-size: 16px;
	margin-top: 120px;
	margin-bottom: 60px;
}

.animated img {
	margin-right: 30px;
	height: 58px;
	width: 58px;
}

.services-list {
	font-size: 18px;
	font-weight: bold;
	list-style: none;
}

.services-list li {
	line-height: 32px;
	margin-bottom: 20px;
	float: left;
	clear: both;
	width: 100%;
}

/*
 * Reactor Services
 */
#reactor-services #panels {
	padding-top: 40px;
}

#reactor-services th {
	border-right: 1px solid #C4C5CA;
	border-bottom: 1px solid #C4C5CA;
	line-height: 30px;
}

#reactor-services th.service-col {
	font-size: 14px;
	font-weight: bold;
	text-align: left;
}

#reactor-services td {
	height: 60px;
	border-right: 1px solid #C4C5CA;
}

#reactor-services .event-rate-col {
	border-right: 0;
}

.status-col img, .logs-col img {
	display: block;
	margin: 0 auto;
}

#reactor-services .instance-wrapper, #reactor-services .instance-wrapper div {
	height: 30px;
}

#reactor-services .instance-wrapper div {
	width: 65px;
	float: left;
}

#reactor-services .services-loading, #reactor-services .services-running {
	height: 32px;
	width: 32px;
}
#reactor-services .services-loading {
	background-image: url(../../img/services-loading-blue.gif);
}

#reactor-services .services-running {
	background-image: url(../../img/ok-icon.png);
}

.instance-wrapper {
	margin: 0 auto;
	width: 150px;
}

.instance-wrapper div {
	display: inline-block;
}

.instance-num {
	background-color: #062040;
	margin-right: 15px;
	width: 60px;
}

.instance-num span {
	color: white;
	display: block;
	font-weight: bold;
	line-height: 30px;
	text-align: center;
}

img[src="assets/img/minus.png"] {
	margin-right: -5px;
}

/*
 * Bootstrap Overrides
 */
.navbar-inner {
	padding: 0 10px;
	background-color: #152c52;
	background-image: -webkit-linear-gradient(top, #152c52, #061c35) !important;
}

.navbar .nav > li > a {
	color: #b8c0cc;
}

.nav-pills > li > a {
	font-size: 12px;
	color: #77878B;
	text-transform: uppercase;
	line-height: 14px;
	height: 27px;
	letter-spacing: 0.1em;
	border-radius: 2px;
}

.nav-pills > li > .active, .nav-pills > li > .active:hover {
	background-color: #8C9495;
	border: 2px solid #A7B0B1;
	color: #fff;
	margin: 0 2px;
	border-radius: 3px;
	line-height: 11px;
	padding: 7px 10px;
}

.nav-pills > li > a:hover {
	background-color: #8c9495;
	color: #fff;
}

.nav-pills > li > a {
	padding: 7px 12px;
	margin: 0 2px;
	line-height: 14px;
}

.nav-tabs>li>a {
	font-size: 12px;
	color: #77878B;
	text-transform: uppercase;
	height: 27px;
	letter-spacing: 0.1em;
	border-radius: 2px;
	padding: 7px 12px;
	margin: 0 2px;
	line-height: 14px;
	cursor: pointer;
}

.dropdown-menu li a {
	cursor: pointer;
	font-size: 12px;
}

a.brand {
	width: 140px;
	height: 40px;
	padding: 0 !important;
	margin: 0 18px 0 0 !important;
	background-image: url(../../img/logo-header.png);
}

.navbar .divider-vertical {
	background-color: #061c35;
	border-right: 1px solid #152c52;
}

#modal-from-dom {
	display: none;
}

.modal-footer .btn {
	margin :0;
}

.modal-body {
	font-size: 13px;
}

.modal-push a {
	color: #005580 !important;
}

.modal-push {
	padding: 0;
}

.modal-push input[type=text] {
	width: 340px;
}

.modal-push select {
	width: 354px;
}

.table {
	margin: 0;
}

.table-condensed td {
	line-height: 14px !important;
}

.panel td {
	padding: 10px;
}

.label {
	cursor: default
}

a strong {
	color: #555;
}

.navbar-inner .container {
	padding: 6px 0 6px 6px;
}

.breadcrumb {
	padding: 4px 8px;
	margin: 0;
	margin-bottom: 12px;
}

#action-buttons {
	margin-top: 18px;
	padding-right: 0;
	line-height: normal;
	position: relative;
}

.btn.btn-blank {
	background: #fff;
	text-shadow: none;
	color: #969CB4;
	letter-spacing: 0.1em;
	line-height: 21px;
	font-size: 14px !important;
	padding: 7px 10px;
	border-radius: 2px;
	opacity: 1;
	border: 1px solid #D3D2D7;
}

.btn.btn-blank:hover {
	opacity: 0.9;
	background: #fff;
	color: #969CB4;
}

.btn.btn-blue {
	border: 1px solid transparent;
	background: #2C56A0;
	text-shadow: none;
	color: white;
	letter-spacing: 0.1em;
	line-height: 21px;
	font-size: 14px !important;
	padding: 7px 10px;
	border-radius: 2px;
	opacity: 1;
}

.btn.btn-blue:hover {
	opacity: 0.9;
	background: #2C56A0;
	color: white;
}

.btn-success, .btn-danger {
	color: #fff;
}

.btn:focus {
	background-position: 0;
}

.create-btn {
	margin: 2px 0 0 8px;
}

.btn-icon {
	padding: 0 8px !important;
}

#action-buttons .btn {
	margin-right: 0;
	height: 56px;
	text-transform: uppercase;
	padding-top: 8px;
}

#action-buttons .btn-stop {
	display: block;
	width: 24px;
	height: 24px;
	margin: 0 auto;
	background-image: url(../../img/flow-controls.png);
	background-position: 0 -24px;
}
/* ... */

